// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`review pages creation runs createReviewPages successfully for all test format versions 1`] = `
"<!DOCTYPE html>
<html lang="en">
  <head>
    <meta charset="utf-8">
    <title>Test Patterns for Review</title>
    <style>
      table {
        border-collapse: collapse;
        margin-bottom: 1em;
      }

      table, td, th {
        border: 1px solid black;
      }

      th {
        padding: 1em;
      }

      td {
        padding: .5em;
      }

      td > p {
        margin: 0;
      }

      tr:not(:first-of-type) th {
        padding: .5em;
        text-align: left;
      }

    </style>
  </head>
  <body>

    <h1>Test Patterns for Review</h1>

    <table>
      <tr>
        <th>Title</th>
        <th>Pattern</th>
        <th>Index Page</th>
        <th>Review Page</th>
        <th>Number of Tests</th>
        <th>Commit of Last Change</th>
      </tr>
          <tr>
            <th>Alert Example</th>
            <td>apg&#x2F;alert</td>
            <td><a href="./tests/apg&#x2F;alert/index.html" aria-label="Index: apg&#x2F;alert">Index</a></td>
            <td><a href="./review/apg&#x2F;alert.html" aria-label="Review: apg&#x2F;alert">Review</a></td>
            <td><p aria-label="Number of Tests: 1">1</p></td>
            <td><a href="https://github.com/w3c/aria-at/commit/" target="_blank"></a></td>
          </tr>
          <tr>
            <th>Banner Landmark</th>
            <td>apg&#x2F;banner</td>
            <td><a href="./tests/apg&#x2F;banner/index.html" aria-label="Index: apg&#x2F;banner">Index</a></td>
            <td><a href="./review/apg&#x2F;banner.html" aria-label="Review: apg&#x2F;banner">Review</a></td>
            <td><p aria-label="Number of Tests: 26">26</p></td>
            <td><a href="https://github.com/w3c/aria-at/commit/" target="_blank"></a></td>
          </tr>
          <tr>
            <th>Color Viewer Slider</th>
            <td>apg&#x2F;horizontal-slider</td>
            <td><a href="./tests/apg&#x2F;horizontal-slider/index.html" aria-label="Index: apg&#x2F;horizontal-slider">Index</a></td>
            <td><a href="./review/apg&#x2F;horizontal-slider.html" aria-label="Review: apg&#x2F;horizontal-slider">Review</a></td>
            <td><p aria-label="Number of Tests: 9">9</p></td>
            <td><a href="https://github.com/w3c/aria-at/commit/" target="_blank"></a></td>
          </tr>
          <tr>
            <th>Command Button Example</th>
            <td>apg&#x2F;command-button</td>
            <td><a href="./tests/apg&#x2F;command-button/index.html" aria-label="Index: apg&#x2F;command-button">Index</a></td>
            <td><a href="./review/apg&#x2F;command-button.html" aria-label="Review: apg&#x2F;command-button">Review</a></td>
            <td><p aria-label="Number of Tests: 3">3</p></td>
            <td><a href="https://github.com/w3c/aria-at/commit/" target="_blank"></a></td>
          </tr>
    </table>

  </body>
</html>
"
`;

exports[`review pages creation runs createReviewPages successfully for all test format versions 2`] = `
"<!DOCTYPE html>
<html lang="en">
  <head>
    <meta charset="utf-8">
    <title>Test Patterns for Review</title>
    <style>
      table {
        border-collapse: collapse;
        margin-bottom: 1em;
      }

      table, td, th {
        border: 1px solid black;
      }

      th {
        padding: 1em;
      }

      td {
        padding: .5em;
      }

      td > p {
        margin: 0;
      }

      tr:not(:first-of-type) th {
        padding: .5em;
        text-align: left;
      }

    </style>
  </head>
  <body>

    <h1>Test Patterns for Review</h1>

    <table>
      <tr>
        <th>Title</th>
        <th>Pattern</th>
        <th>Index Page</th>
        <th>Review Page</th>
        <th>Number of Tests</th>
        <th>Commit of Last Change</th>
      </tr>
          <tr>
            <th>Alert Example</th>
            <td>apg&#x2F;alert</td>
            <td><a href="./tests/apg&#x2F;alert/index.html" aria-label="Index: apg&#x2F;alert">Index</a></td>
            <td><a href="./review/apg&#x2F;alert.html" aria-label="Review: apg&#x2F;alert">Review</a></td>
            <td><p aria-label="Number of Tests: 1">1</p></td>
            <td><a href="https://github.com/w3c/aria-at/commit/" target="_blank"></a></td>
          </tr>
          <tr>
            <th>Banner Landmark</th>
            <td>apg&#x2F;banner</td>
            <td><a href="./tests/apg&#x2F;banner/index.html" aria-label="Index: apg&#x2F;banner">Index</a></td>
            <td><a href="./review/apg&#x2F;banner.html" aria-label="Review: apg&#x2F;banner">Review</a></td>
            <td><p aria-label="Number of Tests: 26">26</p></td>
            <td><a href="https://github.com/w3c/aria-at/commit/" target="_blank"></a></td>
          </tr>
          <tr>
            <th>Color Viewer Slider</th>
            <td>apg&#x2F;horizontal-slider</td>
            <td><a href="./tests/apg&#x2F;horizontal-slider/index.html" aria-label="Index: apg&#x2F;horizontal-slider">Index</a></td>
            <td><a href="./review/apg&#x2F;horizontal-slider.html" aria-label="Review: apg&#x2F;horizontal-slider">Review</a></td>
            <td><p aria-label="Number of Tests: 9">9</p></td>
            <td><a href="https://github.com/w3c/aria-at/commit/" target="_blank"></a></td>
          </tr>
          <tr>
            <th>Command Button Example</th>
            <td>apg&#x2F;command-button</td>
            <td><a href="./tests/apg&#x2F;command-button/index.html" aria-label="Index: apg&#x2F;command-button">Index</a></td>
            <td><a href="./review/apg&#x2F;command-button.html" aria-label="Review: apg&#x2F;command-button">Review</a></td>
            <td><p aria-label="Number of Tests: 3">3</p></td>
            <td><a href="https://github.com/w3c/aria-at/commit/" target="_blank"></a></td>
          </tr>
    </table>

  </body>
</html>
"
`;

exports[`review pages creation runs createReviewPages successfully for all test format versions 3`] = `
"<!DOCTYPE html>
<html lang="en">
  <head>
    <meta charset="utf-8">
    <title>Test Patterns for Review</title>
    <style>
      table {
        border-collapse: collapse;
        margin-bottom: 1em;
      }

      table, td, th {
        border: 1px solid black;
      }

      th {
        padding: 1em;
      }

      td {
        padding: .5em;
      }

      td > p {
        margin: 0;
      }

      tr:not(:first-of-type) th {
        padding: .5em;
        text-align: left;
      }

    </style>
  </head>
  <body>

    <h1>Test Patterns for Review</h1>

    <table>
      <tr>
        <th>Title</th>
        <th>Pattern</th>
        <th>Index Page</th>
        <th>Review Page</th>
        <th>Number of Tests</th>
        <th>Commit of Last Change</th>
      </tr>
          <tr>
            <th>Alert Example</th>
            <td>apg&#x2F;alert</td>
            <td><a href="./tests/apg&#x2F;alert/index.html" aria-label="Index: apg&#x2F;alert">Index</a></td>
            <td><a href="./review/apg&#x2F;alert.html" aria-label="Review: apg&#x2F;alert">Review</a></td>
            <td><p aria-label="Number of Tests: 1">1</p></td>
            <td><a href="https://github.com/w3c/aria-at/commit/" target="_blank"></a></td>
          </tr>
          <tr>
            <th>Banner Landmark</th>
            <td>apg&#x2F;banner</td>
            <td><a href="./tests/apg&#x2F;banner/index.html" aria-label="Index: apg&#x2F;banner">Index</a></td>
            <td><a href="./review/apg&#x2F;banner.html" aria-label="Review: apg&#x2F;banner">Review</a></td>
            <td><p aria-label="Number of Tests: 26">26</p></td>
            <td><a href="https://github.com/w3c/aria-at/commit/" target="_blank"></a></td>
          </tr>
          <tr>
            <th>Color Viewer Slider</th>
            <td>apg&#x2F;horizontal-slider</td>
            <td><a href="./tests/apg&#x2F;horizontal-slider/index.html" aria-label="Index: apg&#x2F;horizontal-slider">Index</a></td>
            <td><a href="./review/apg&#x2F;horizontal-slider.html" aria-label="Review: apg&#x2F;horizontal-slider">Review</a></td>
            <td><p aria-label="Number of Tests: 9">9</p></td>
            <td><a href="https://github.com/w3c/aria-at/commit/" target="_blank"></a></td>
          </tr>
          <tr>
            <th>Command Button Example</th>
            <td>apg&#x2F;command-button</td>
            <td><a href="./tests/apg&#x2F;command-button/index.html" aria-label="Index: apg&#x2F;command-button">Index</a></td>
            <td><a href="./review/apg&#x2F;command-button.html" aria-label="Review: apg&#x2F;command-button">Review</a></td>
            <td><p aria-label="Number of Tests: 3">3</p></td>
            <td><a href="https://github.com/w3c/aria-at/commit/" target="_blank"></a></td>
          </tr>
    </table>

  </body>
</html>
"
`;

exports[`review pages creation runs createReviewPages successfully for all test format versions 4`] = `
"<!DOCTYPE html>
<html lang="en">
  <head>
    <meta charset="utf-8">
    <title>Test Patterns for Review</title>
    <style>
      table {
        border-collapse: collapse;
        margin-bottom: 1em;
      }

      table, td, th {
        border: 1px solid black;
      }

      th {
        padding: 1em;
      }

      td {
        padding: .5em;
      }

      td > p {
        margin: 0;
      }

      tr:not(:first-of-type) th {
        padding: .5em;
        text-align: left;
      }

    </style>
  </head>
  <body>

    <h1>Test Patterns for Review</h1>

    <table>
      <tr>
        <th>Title</th>
        <th>Pattern</th>
        <th>Index Page</th>
        <th>Review Page</th>
        <th>Number of Tests</th>
        <th>Commit of Last Change</th>
      </tr>
          <tr>
            <th>Alert Example</th>
            <td>apg&#x2F;alert</td>
            <td><a href="./tests/apg&#x2F;alert/index.html" aria-label="Index: apg&#x2F;alert">Index</a></td>
            <td><a href="./review/apg&#x2F;alert.html" aria-label="Review: apg&#x2F;alert">Review</a></td>
            <td><p aria-label="Number of Tests: 1">1</p></td>
            <td><a href="https://github.com/w3c/aria-at/commit/" target="_blank"></a></td>
          </tr>
          <tr>
            <th>Banner Landmark</th>
            <td>apg&#x2F;banner</td>
            <td><a href="./tests/apg&#x2F;banner/index.html" aria-label="Index: apg&#x2F;banner">Index</a></td>
            <td><a href="./review/apg&#x2F;banner.html" aria-label="Review: apg&#x2F;banner">Review</a></td>
            <td><p aria-label="Number of Tests: 26">26</p></td>
            <td><a href="https://github.com/w3c/aria-at/commit/" target="_blank"></a></td>
          </tr>
          <tr>
            <th>Color Viewer Slider</th>
            <td>apg&#x2F;horizontal-slider</td>
            <td><a href="./tests/apg&#x2F;horizontal-slider/index.html" aria-label="Index: apg&#x2F;horizontal-slider">Index</a></td>
            <td><a href="./review/apg&#x2F;horizontal-slider.html" aria-label="Review: apg&#x2F;horizontal-slider">Review</a></td>
            <td><p aria-label="Number of Tests: 9">9</p></td>
            <td><a href="https://github.com/w3c/aria-at/commit/" target="_blank"></a></td>
          </tr>
          <tr>
            <th>Command Button Example</th>
            <td>apg&#x2F;command-button</td>
            <td><a href="./tests/apg&#x2F;command-button/index.html" aria-label="Index: apg&#x2F;command-button">Index</a></td>
            <td><a href="./review/apg&#x2F;command-button.html" aria-label="Review: apg&#x2F;command-button">Review</a></td>
            <td><p aria-label="Number of Tests: 3">3</p></td>
            <td><a href="https://github.com/w3c/aria-at/commit/" target="_blank"></a></td>
          </tr>
    </table>

  </body>
</html>
"
`;

exports[`review pages creation runs createReviewPages successfully for v1 tests (banner) 1`] = `
"<!DOCTYPE html>
<html lang="en">
  <head>
    <meta charset="utf-8">
    <title>Test Patterns for Review</title>
    <style>
      table {
        border-collapse: collapse;
        margin-bottom: 1em;
      }

      table, td, th {
        border: 1px solid black;
      }

      th {
        padding: 1em;
      }

      td {
        padding: .5em;
      }

      td > p {
        margin: 0;
      }

      tr:not(:first-of-type) th {
        padding: .5em;
        text-align: left;
      }

    </style>
  </head>
  <body>

    <h1>Test Patterns for Review</h1>

    <table>
      <tr>
        <th>Title</th>
        <th>Pattern</th>
        <th>Index Page</th>
        <th>Review Page</th>
        <th>Number of Tests</th>
        <th>Commit of Last Change</th>
      </tr>
          <tr>
            <th>Banner Landmark</th>
            <td>apg&#x2F;banner</td>
            <td><a href="./tests/apg&#x2F;banner/index.html" aria-label="Index: apg&#x2F;banner">Index</a></td>
            <td><a href="./review/apg&#x2F;banner.html" aria-label="Review: apg&#x2F;banner">Review</a></td>
            <td><p aria-label="Number of Tests: 26">26</p></td>
            <td><a href="https://github.com/w3c/aria-at/commit/" target="_blank"></a></td>
          </tr>
    </table>

  </body>
</html>
"
`;

exports[`review pages creation runs createReviewPages successfully for v2 tests (alert) 1`] = `
"<!DOCTYPE html>
<html lang="en">
  <head>
    <meta charset="utf-8">
    <title>Test Patterns for Review</title>
    <style>
      table {
        border-collapse: collapse;
        margin-bottom: 1em;
      }

      table, td, th {
        border: 1px solid black;
      }

      th {
        padding: 1em;
      }

      td {
        padding: .5em;
      }

      td > p {
        margin: 0;
      }

      tr:not(:first-of-type) th {
        padding: .5em;
        text-align: left;
      }

    </style>
  </head>
  <body>

    <h1>Test Patterns for Review</h1>

    <table>
      <tr>
        <th>Title</th>
        <th>Pattern</th>
        <th>Index Page</th>
        <th>Review Page</th>
        <th>Number of Tests</th>
        <th>Commit of Last Change</th>
      </tr>
          <tr>
            <th>Alert Example</th>
            <td>apg&#x2F;alert</td>
            <td><a href="./tests/apg&#x2F;alert/index.html" aria-label="Index: apg&#x2F;alert">Index</a></td>
            <td><a href="./review/apg&#x2F;alert.html" aria-label="Review: apg&#x2F;alert">Review</a></td>
            <td><p aria-label="Number of Tests: 1">1</p></td>
            <td><a href="https://github.com/w3c/aria-at/commit/" target="_blank"></a></td>
          </tr>
    </table>

  </body>
</html>
"
`;

exports[`review pages creation runs createReviewPages successfully for v2 tests (command-button) 1`] = `
"<!DOCTYPE html>
<html lang="en">
  <head>
    <meta charset="utf-8">
    <title>Test Patterns for Review</title>
    <style>
      table {
        border-collapse: collapse;
        margin-bottom: 1em;
      }

      table, td, th {
        border: 1px solid black;
      }

      th {
        padding: 1em;
      }

      td {
        padding: .5em;
      }

      td > p {
        margin: 0;
      }

      tr:not(:first-of-type) th {
        padding: .5em;
        text-align: left;
      }

    </style>
  </head>
  <body>

    <h1>Test Patterns for Review</h1>

    <table>
      <tr>
        <th>Title</th>
        <th>Pattern</th>
        <th>Index Page</th>
        <th>Review Page</th>
        <th>Number of Tests</th>
        <th>Commit of Last Change</th>
      </tr>
          <tr>
            <th>Command Button Example</th>
            <td>apg&#x2F;command-button</td>
            <td><a href="./tests/apg&#x2F;command-button/index.html" aria-label="Index: apg&#x2F;command-button">Index</a></td>
            <td><a href="./review/apg&#x2F;command-button.html" aria-label="Review: apg&#x2F;command-button">Review</a></td>
            <td><p aria-label="Number of Tests: 3">3</p></td>
            <td><a href="https://github.com/w3c/aria-at/commit/" target="_blank"></a></td>
          </tr>
    </table>

  </body>
</html>
"
`;

exports[`review pages creation runs createReviewPages successfully for v2 tests (horizontal-slider) 1`] = `
"<!DOCTYPE html>
<html lang="en">
  <head>
    <meta charset="utf-8">
    <title>Test Patterns for Review</title>
    <style>
      table {
        border-collapse: collapse;
        margin-bottom: 1em;
      }

      table, td, th {
        border: 1px solid black;
      }

      th {
        padding: 1em;
      }

      td {
        padding: .5em;
      }

      td > p {
        margin: 0;
      }

      tr:not(:first-of-type) th {
        padding: .5em;
        text-align: left;
      }

    </style>
  </head>
  <body>

    <h1>Test Patterns for Review</h1>

    <table>
      <tr>
        <th>Title</th>
        <th>Pattern</th>
        <th>Index Page</th>
        <th>Review Page</th>
        <th>Number of Tests</th>
        <th>Commit of Last Change</th>
      </tr>
          <tr>
            <th>Color Viewer Slider</th>
            <td>apg&#x2F;horizontal-slider</td>
            <td><a href="./tests/apg&#x2F;horizontal-slider/index.html" aria-label="Index: apg&#x2F;horizontal-slider">Index</a></td>
            <td><a href="./review/apg&#x2F;horizontal-slider.html" aria-label="Review: apg&#x2F;horizontal-slider">Review</a></td>
            <td><p aria-label="Number of Tests: 9">9</p></td>
            <td><a href="https://github.com/w3c/aria-at/commit/" target="_blank"></a></td>
          </tr>
    </table>

  </body>
</html>
"
`;
